test if specifying overflow-y scroll fixes mobile scrolling problem

--- a/sq-front/src/index.css
+++ b/sq-front/src/index.css
@@ -38,6 +38,7 @@
 
 #root {
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 1080px) {
